--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,47 @@
   margin: 0;
   padding: 0;
 }
+
+ul,
+ol,
+menu {
+  list-style: none;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.carousel {
+  position: relative;
+}
+
+.carousel__slide {
+  display: none;
+}
+
+.carousel__slide.carousel-slide--active {
+  display: block;
+}
+
+.carousel__slide img {
+  display: block;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.carousel__arrows {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 24px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  color: #bad;
+  font-size: 32px;
+}
